--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrimeShine Auto Detailing - Premium Mobile Car Detailing in the GTA</title>
-    
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+<!-- Or if it's in a folder: -->
+<!-- <link rel="icon" href="/images/favicon.ico" type="image/x-icon"> -->
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+<!-- Or if it's in a folder: -->
+<!-- <link rel="icon" href="/images/favicon.ico" type="image/x-icon"> -->
+
     <!-- Favicon and Logo -->
     <link rel="icon" type="image/png" href="assets/logo.png">
     <link rel="apple-touch-icon" href="assets/logo.png">
