--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <!-- Or if it's in a folder: -->
 <!-- <link rel="icon" href="/images/favicon.ico" type="image/x-icon"> -->
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="assets/logo.png">
 <!-- Or if it's in a folder: -->
 <!-- <link rel="icon" href="/images/favicon.ico" type="image/x-icon"> -->
 
     <!-- Favicon and Logo -->
-    <link rel="icon" type="image/png" href="assets/logo.png">
-    <link rel="apple-touch-icon" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo">
+    <link rel="apple-touch-icon" href="assets/logo">
     <meta name="theme-color" content="#3b82f6">
     
     <!-- Structured Data for Organization -->
