--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link rel="icon" href="favicon.ico" type="assets/logo.png">
 <!-- Or if it's in a folder: -->
-<!-- <link rel="icon" href="/images/favicon.ico" type="image/x-icon"> -->
+<!-- <link rel="icon" href="/images/favicon.ico" type="assets/logo.png"> -->
 
     <!-- Favicon and Logo -->
     <link rel="icon" type="image/png" href="assets/logo">
