--- a/index.html
+++ b/index.html
@@ -227,8 +227,10 @@
         </div>
         <nav class="nav-container">
             <div class="logo">
-                <img src="assets/logo.png" alt="PrimeShine Auto Detailing Logo">
-                <span>PrimeShine</span>
+                <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 0.5rem;">
+                    <img src="assets/logo.png" alt="PrimeShine Auto Detailing Logo">
+                    <span>PrimeShine</span>
+                </a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
