--- a/index.html
+++ b/index.html
@@ -266,7 +266,14 @@
 
     <!-- Services Section -->
     <section class="services-section" style="padding: 4rem 0;">
-      <h2 style="text-align:center;font-size:2.2rem;font-weight:700;letter-spacing:1px;margin-bottom:2.5rem;color:#f1f5f9;">OUR SERVICES</h2>
+      <h2 style="text-align:center;font-size:2.2rem;font-weight:700;letter-spacing:1px;margin-bottom:0.5rem;color:#f1f5f9;">OUR SERVICES</h2>
+      <p style="text-align:center;font-size:1.1rem;color:#cbd5e1;margin-bottom:2.5rem;display:flex;align-items:center;justify-content:center;gap:0.5rem;">
+        <i class="fas fa-map-marker-alt" style="color:#3b82f6;"></i>
+        We service all the GTA
+        <span style="margin:0 0.5rem;">•</span>
+        <i class="fas fa-star" style="color:#fbbf24;"></i>
+        5-Star Guarantee
+      </p>
       <div class="services-container" style="max-width: 1100px; margin: 0 auto; display: flex; gap: 2rem; justify-content: center; flex-wrap: wrap;">
         <div class="service-card" style="background: #1e293b; border-radius: 18px; box-shadow: 0 2px 12px rgba(0,0,0,0.3); flex: 1 1 340px; max-width: 360px; display: flex; flex-direction: column; align-items: center; padding: 2rem 1.2rem;">
           <div style="display: flex; gap: 2%; width: 100%; justify-content: center; margin-bottom: 1.2rem;">
@@ -367,125 +374,135 @@
         <p class="section-subtitle">Get your free quote in seconds</p>
         <div class="booking-container">
             <form id="booking-form" class="booking-form">
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="vehicle-type"><i class="fas fa-car"></i> Vehicle Type <span style="color:#e11d48;">*</span></label>
-                        <select id="vehicle-type" required title="Select vehicle type">
-                            <option value="">Select vehicle type</option>
-                            <option value="coupe"><i class="fas fa-car"></i> Coupe</option>
-                            <option value="sedan"><i class="fas fa-car"></i> Sedan</option>
-                            <option value="suv5"><i class="fas fa-car-side"></i> SUV (5-Seater)</option>
-                            <option value="suv7"><i class="fas fa-car-side"></i> SUV (7-Seater)</option>
-                            <option value="truck"><i class="fas fa-truck-pickup"></i> Pick-Up Truck</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="vehicle-brand"><i class="fas fa-trademark"></i> Vehicle Brand</label>
-                        <select id="vehicle-brand" name="vehicle-brand" title="Select vehicle brand">
-                            <option value=""><i class="fas fa-trademark"></i> Select Vehicle Brand (Optional)</option>
-                            <option value="Toyota"><i class="fas fa-car"></i> Toyota</option>
-                            <option value="Honda"><i class="fas fa-car"></i> Honda</option>
-                            <option value="Ford"><i class="fas fa-car"></i> Ford</option>
-                            <option value="Chevrolet"><i class="fas fa-car"></i> Chevrolet</option>
-                            <option value="BMW"><i class="fas fa-car"></i> BMW</option>
-                            <option value="Mercedes-Benz"><i class="fas fa-car"></i> Mercedes-Benz</option>
-                            <option value="Audi"><i class="fas fa-car"></i> Audi</option>
-                            <option value="Hyundai"><i class="fas fa-car"></i> Hyundai</option>
-                            <option value="Nissan"><i class="fas fa-car"></i> Nissan</option>
-                            <option value="Volkswagen"><i class="fas fa-car"></i> Volkswagen</option>
-                            <option value="Other"><i class="fas fa-car"></i> Other</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="vehicle-model"><i class="fas fa-car-side"></i> Vehicle Model</label>
-                        <select id="vehicle-model" name="vehicle-model" title="Select vehicle model" disabled>
-                            <option value=""><i class="fas fa-car-side"></i> Select Model (Optional)</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="date-picker"><i class="fas fa-calendar-alt"></i> Date <span style="color:#e11d48;">*</span></label>
-                        <div class="input-with-icon">
-                            <input type="text" id="date-picker" required placeholder="Select date" title="Select date">
+                <!-- Vehicle Selection and Time Section -->
+                <div class="form-section">
+                    <h3 class="section-heading">Vehicle and Time Selection</h3>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="vehicle-type"><i class="fas fa-car"></i> Vehicle Type <span style="color:#e11d48;">*</span></label>
+                            <select id="vehicle-type" required title="Select vehicle type">
+                                <option value="">Select vehicle type</option>
+                                <option value="coupe"><i class="fas fa-car"></i> Coupe</option>
+                                <option value="sedan"><i class="fas fa-car"></i> Sedan</option>
+                                <option value="suv5"><i class="fas fa-car-side"></i> SUV (5-Seater)</option>
+                                <option value="suv7"><i class="fas fa-car-side"></i> SUV (7-Seater)</option>
+                                <option value="truck"><i class="fas fa-truck-pickup"></i> Pick-Up Truck</option>
+                            </select>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="time-picker"><i class="fas fa-clock"></i> Time <span style="color:#e11d48;">*</span></label>
-                        <div class="input-with-icon">
-                            <select id="time-picker" required title="Select time">
-                                <option value="">Select Time Slot</option>
-                                <optgroup label="Morning">
-                                    <option value="08:00">8:00 AM</option>
-                                    <option value="09:00">9:00 AM</option>
-                                    <option value="10:00">10:00 AM</option>
-                                    <option value="11:00">11:00 AM</option>
-                                </optgroup>
-                                <optgroup label="Afternoon">
-                                    <option value="12:00">12:00 PM</option>
-                                    <option value="13:00">1:00 PM</option>
-                                    <option value="14:00">2:00 PM</option>
-                                    <option value="15:00">3:00 PM</option>
-                                    <option value="16:00">4:00 PM</option>
-                                    <option value="17:00">5:00 PM</option>
-                                </optgroup>
+                        <div class="form-group">
+                            <label for="vehicle-brand"><i class="fas fa-trademark"></i> Vehicle Brand</label>
+                            <select id="vehicle-brand" name="vehicle-brand" title="Select vehicle brand">
+                                <option value=""><i class="fas fa-trademark"></i> Select Vehicle Brand (Optional)</option>
+                                <option value="Toyota"><i class="fas fa-car"></i> Toyota</option>
+                                <option value="Honda"><i class="fas fa-car"></i> Honda</option>
+                                <option value="Ford"><i class="fas fa-car"></i> Ford</option>
+                                <option value="Chevrolet"><i class="fas fa-car"></i> Chevrolet</option>
+                                <option value="BMW"><i class="fas fa-car"></i> BMW</option>
+                                <option value="Mercedes-Benz"><i class="fas fa-car"></i> Mercedes-Benz</option>
+                                <option value="Audi"><i class="fas fa-car"></i> Audi</option>
+                                <option value="Hyundai"><i class="fas fa-car"></i> Hyundai</option>
+                                <option value="Nissan"><i class="fas fa-car"></i> Nissan</option>
+                                <option value="Volkswagen"><i class="fas fa-car"></i> Volkswagen</option>
+                                <option value="Other"><i class="fas fa-car"></i> Other</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="vehicle-model"><i class="fas fa-car-side"></i> Vehicle Model</label>
+                            <select id="vehicle-model" name="vehicle-model" title="Select vehicle model" disabled>
+                                <option value=""><i class="fas fa-car-side"></i> Select Model (Optional)</option>
                             </select>
                         </div>
                     </div>
-                </div>
-                <div class="service-options">
-                    <div class="service-category">
-                        <h4 class="category-title">Detailing Services</h4>
-                        <div class="category-options">
-                            <label class="service-option">
-                                <input type="checkbox" class="service-checkbox" value="ultimate">
-                                <span class="service-name">Full Detail</span>
-                                <span class="service-desc">Interior & Exterior Deep Clean</span>
-                            </label>
-                            <label class="service-option">
-                                <input type="checkbox" class="service-checkbox" value="interior">
-                                <span class="service-name">Interior Detail</span>
-                                <span class="service-desc">Interior Only</span>
-                            </label>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="date-picker"><i class="fas fa-calendar-alt"></i> Date <span style="color:#e11d48;">*</span></label>
+                            <div class="input-with-icon">
+                                <input type="text" id="date-picker" required placeholder="Select date" title="Select date">
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="service-category">
-                        <h4 class="category-title">Paint Enhancement</h4>
-                        <div class="category-options">
-                            <label class="service-option">
-                                <input type="checkbox" class="service-checkbox" value="correction-1step">
-                                <span class="service-name">1-Step Paint Correction</span>
-                                <span class="service-desc">Light to Moderate Swirl Removal</span>
-                                <span class="service-benefits">Perfect for maintaining shine & removing minor imperfections</span>
-                            </label>
-                            <label class="service-option">
-                                <input type="checkbox" class="service-checkbox" value="correction-2step">
-                                <span class="service-name">2-Step Paint Correction</span>
-                                <span class="service-desc">Deep Scratch & Swirl Removal</span>
-                                <span class="service-benefits">Maximum correction for severe paint damage & show car finish</span>
-                            </label>
-                        </div>
-                    </div>
-
-                    <div class="service-category">
-                        <h4 class="category-title">Ceramic Protection</h4>
-                        <div class="category-options">
-                            <label class="service-option">
-                                <input type="checkbox" class="service-checkbox" value="ceramic-premium">
-                                <span class="service-name">Premium Ceramic Coating</span>
-                                <span class="service-desc">5-Year Protection</span>
-                                <span class="service-benefits">Maximum durability & longevity</span>
-                            </label>
-                            <label class="service-option">
-                                <input type="checkbox" class="service-checkbox" value="ceramic-gloss">
-                                <span class="service-name">Gloss Ceramic Coating</span>
-                                <span class="service-desc">5-Year Protection (2 Layers)</span>
-                                <span class="service-benefits">Superior gloss & hydrophobics</span>
-                            </label>
+                        <div class="form-group">
+                            <label for="time-picker"><i class="fas fa-clock"></i> Time <span style="color:#e11d48;">*</span></label>
+                            <div class="input-with-icon">
+                                <select id="time-picker" required title="Select time">
+                                    <option value="">Select Time Slot</option>
+                                    <optgroup label="Morning">
+                                        <option value="08:00">8:00 AM</option>
+                                        <option value="09:00">9:00 AM</option>
+                                        <option value="10:00">10:00 AM</option>
+                                        <option value="11:00">11:00 AM</option>
+                                    </optgroup>
+                                    <optgroup label="Afternoon">
+                                        <option value="12:00">12:00 PM</option>
+                                        <option value="13:00">1:00 PM</option>
+                                        <option value="14:00">2:00 PM</option>
+                                        <option value="15:00">3:00 PM</option>
+                                        <option value="16:00">4:00 PM</option>
+                                        <option value="17:00">5:00 PM</option>
+                                    </optgroup>
+                                </select>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- Service Selection Section -->
+                <div class="form-section">
+                    <h3 class="section-heading">Service Selection</h3>
+                    <div class="service-options">
+                        <div class="service-category">
+                            <h4 class="category-title">Detailing Services</h4>
+                            <div class="category-options">
+                                <label class="service-option">
+                                    <input type="checkbox" class="service-checkbox" value="ultimate">
+                                    <span class="service-name">Full Detail</span>
+                                    <span class="service-desc">Interior & Exterior Deep Clean</span>
+                                </label>
+                                <label class="service-option">
+                                    <input type="checkbox" class="service-checkbox" value="interior">
+                                    <span class="service-name">Interior Detail</span>
+                                    <span class="service-desc">Interior Only</span>
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="service-category">
+                            <h4 class="category-title">Paint Enhancement</h4>
+                            <div class="category-options">
+                                <label class="service-option">
+                                    <input type="checkbox" class="service-checkbox" value="correction-1step">
+                                    <span class="service-name">1-Step Paint Correction</span>
+                                    <span class="service-desc">Light to Moderate Swirl Removal</span>
+                                    <span class="service-benefits">Perfect for maintaining shine & removing minor imperfections</span>
+                                </label>
+                                <label class="service-option">
+                                    <input type="checkbox" class="service-checkbox" value="correction-2step">
+                                    <span class="service-name">2-Step Paint Correction</span>
+                                    <span class="service-desc">Deep Scratch & Swirl Removal</span>
+                                    <span class="service-benefits">Maximum correction for severe paint damage & show car finish</span>
+                                </label>
+                            </div>
+                        </div>
+
+                        <div class="service-category">
+                            <h4 class="category-title">Ceramic Protection</h4>
+                            <div class="category-options">
+                                <label class="service-option">
+                                    <input type="checkbox" class="service-checkbox" value="ceramic-premium">
+                                    <span class="service-name">Premium Ceramic Coating</span>
+                                    <span class="service-desc">5-Year Protection</span>
+                                    <span class="service-benefits">Maximum durability & longevity</span>
+                                </label>
+                                <label class="service-option">
+                                    <input type="checkbox" class="service-checkbox" value="ceramic-gloss">
+                                    <span class="service-name">Gloss Ceramic Coating</span>
+                                    <span class="service-desc">5-Year Protection (2 Layers)</span>
+                                    <span class="service-benefits">Superior gloss & hydrophobics</span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="quote-display">
                     <span class="quote-label">Your Quote</span>
                     <span id="quote-amount" class="quote-amount">$0</span>
